# Sinyfy

./: CHANGELOG.md  MANIFEST.in  README.md  Sinyfy.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yml
Sinyfy.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
lib/: sinyfy-1.0.0-py3-none-any.whl
